2005-12-12  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.13.0.3: 
	* NEWS, configure.ac: Updated
	* docs/C/gdm.xml: Updated version/date.

2005-12-12  Brian Cameron  <brian.cameron@sun.com>

	* daemon/misc.c, daemon/server.c, daemon/verify-crypt.c,
	  daemon/verify-pam.c, daemon/verify-shadow.c,
	  daemon/xdmcp.c, gui/gdmXnestchooser.c, gui/gdmchooser.c,
	  gui/gdmcomm.c, gui/gdmcommon.[ch], gui/gdmdynamic.c, 
	  gui/gdmlanguages.c, gui/gdmlogin.c, gui/gdmphotosetup.c,
	  gui/gdmsession.c, gui/gdmuser.c, gui/gdmwm.[ch],
	  gui/greeter/greeter.c, gui/greeter/greeter_action_language.c,
	  gui/greeter/greeter_canvas_item.c, 
	  gui/greeter/greeter_item.c,
	  gui/greeter/greeter_item_capslock.c,
	  gui/greeter/greeter_item_pam.c,
	  gui/greeter/greeter_item_timed.c,
	  gui/greeter/greeter_item_ulist.c,
	  gui/greeter/greeter_parser.c, 
	  gui/greeter/greeter_session.c,
	  gui/greeter/greeter_system.c,
	  gui/misc.c, gui/modules/dwellmouselistener.c,
	  gui/modules/keymouselistener.c,
	  utils/gdm-dmx-reconnect-proxy.c,
	  utils/gdmaskpass.c:  Remove libgnome dependencies except
 	  in gdmflexiserver.c and gdmsetup.c.  Patch provided by 
	  Jani Monoses on gdm-list@gnome.org.

2005-12-03  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gui/gdmsetup.c: (gg_selection_changed), (read_themes),
	(xserver_button_clicked), (setup_local_themed_settings),
	(setup_remote_themed_settings), (setup_gui):
	* gui/gdmsetup.glade:  First set of UI changes as 
	recommended by Calum Benson. 

2005-12-02  Brian Cameron  <brian.cameron@sun.com>

	* README, daemon/gdm.h:  More clear stability
	  information about the gdm.conf file.  Better
	  comments for ADD_DYNAMIC_DISPLAY socket 
	  command.

2005-11-28  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.13.0.2: 
	* NEWS, configure.ac: Updated
	* docs/C/gdm.xml: Updated version/date and
	  added new info about GET_CONFIG command.

2005-11-28  Brian Cameron  <brian.cameron@sun.com>
