@@ -3,6 +3,9 @@
 	* Release 2.13.0.3: 
 	* NEWS, configure.ac: Updated
 	* docs/C/gdm.xml: Updated version/date.
+	* daemon/gdm.[ch]: Comment out new protocol commands
+	  I am adding to get rid of the need to use gnome
+	  config.  This will be in the next release.
 
 2005-12-12  Brian Cameron  <brian.cameron@sun.com>
 
